...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvPlayerOne"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="22dp"
                        android:layout_marginBottom="6dp"
                        android:text="@string/player_one" />

                    <Button
                        android:id="@+id/button_player_1"
                        android:layout_width="206dp"
                        android:layout_height="155dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_marginVertical="5dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/button_update_inactive"
...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:text="UnderdogRound: 0" />
            <Button
                android:id="@+id/endround"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/end_round"

                />
...
