...
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="game">Game %1$d</string>
    <string name="players_signature" translatable="false">%1$s, %2$s, %3$s, %4$s</string>
    <string name="no_running_games">No Running Games</string>
    <string name="no_finished_games">No Finished Games</string>

    <string name="initial_game_stat_points" translatable="false">0</string>
    <string name="player_one">Player One</string>
    <string name="player_two">Player Two</string>
    <string name="player_three">Player Three</string>
...
