...
    android:background="@color/doriangray"
    tools:context=".ui.options.OptionsFragment"
    >


    <TextView
        android:id="@+id/text_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textAlignment="center"
...
